# pc_Store

./: README.md  main.py  pyproject.toml  store_pc.db
alembic/: README  __init__.py  alembic_crud.py  env.py
alembic/controllers/: alembic_controller.py  dependencies.py
alembic/repositories/: alembic_repository.py
alembic/versions/: 203850694661_create_order_table.py  20b831133bbe_add_column_count_for_table_association.py  56499e73eee2_create_post_table.py  752079a6ef02_create_post_table.py  88d9f905436d_create_product_and_user_table.py  (+6 more)
controllers/: product_controller.py  user_controller.py
core/: __init__.py  config.py  db_helper.py
models/: __init__.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  profileResponseBody.py  user.py
pc_store/: main.py  pyproject.toml  store_pc.db
pc_store/api_v1/: __init__.py
pc_store/api_v1/controllers/: dependencies.py  product_controller.py
pc_store/api_v1/models/: product.py
pc_store/api_v1/repositories/: product_repository.py
pc_store/controllers/: product_controller.py  user_controller.py
pc_store/core/: config.py  db_helper.py
pc_store/models/: __init__.py  user.py
pc_store/repositories/: product_repository.py  user_repository.py
pc_store/src/: crud.py  main.py  views.py
pc_store/src/controllers/: product_controller.py  user_controller.py
pc_store/src/models/: product.py  user.py
pc_store/src/repositories/: product_repository.py  user_repository.py
pc_store/src/schemas/: users.py
repositories/: product_repository.py  user_repository.py
(+3 files in other folders)
