[project]
name = "pc-store"
version = "0.1.0"
description = "Practice FastAPI app"
authors = [
    {name = "danil.bobryshov",email = "danil.bobryshov@mail.ru"}
]
license = {text = "MVP"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"